Fixed: Made it so that losing an object in the game mode requires the acceleration to be zero, so that an object at the peak of a trajectory up the ramp won't end the round
# 1.03.67 (41358) Jun 2, 2010
Fixed: FBD has a hand but is not interactive in the game mode
Fixed: Ramp color wrong on startup between games
Added a new failure mode: Not Enough Energy to Overcome Static Friction
Moved the pusher character behind the play area vectors
Fixed: Friction force should enter into the system before wall force, since the object would have to move before "communicating" with the wall.
Removed an orphaned string 'sound'
Fixed a bug that caused charts only to clear after clearing the model twice.
Fixed: icicle graphics move around on the ramp while the sim is running
# 1.03.66 (41240) May 26, 2010
Improved performance on chart tabs by switching from JLabel to JTextField
Removed the "Fixed/Adjustable" radio buttons from the coordinates tab
Fixed: The F_sum label in the control panel overlaps the arrow symbol
Internal improvements, performance optimizations and improved documentation
# 1.03.65 (41163) May 25, 2010
Fixed: Object shouldn't go behind house if it misses the door
Show crashed image icons in summary windows during game mode, if object crashed
After 10 seconds of no arrows key pressing, pop up the "press arrow keys" icon
Removed workaround that checked the result hashmap before applying game logic
Move object into house (between layers) on successful delivery
Fixed: Door only partly opens on second play through
Set ramp angle slider maximum to 80 degrees
Converted vector component selection controls from checkboxes to radio buttons in Coordinate Frames tab
Fixed: Fire dog water drops appear below the fire dog
Fixed: when dragging the rightmost wall, it snaps the ramp to be at the mouse location
Add energy conservation on airborne -> ground crash by dissipating extra energy into heat
Fixed: Object remains broken after crashing when you hit playback